lagt till ett "register" i portalen, där moduler kan registrera controllers/routes/mm

--- a/portal/src/main/webapp/index.html
+++ b/portal/src/main/webapp/index.html
@@ -11,6 +11,7 @@
         <ul class="menu">
             <li><a href="#/view1">View 1</a></li>
             <li><a href="#/view2">View 2</a></li>
+            <li><a href="#/module1/view1">Module 1, View 1</a></li>
         </ul>
         <div ng-view></div>
         <script data-main="js/main" src="webjars/requirejs/2.1.10/require.js"></script>
